examples/error-codes/violates-constraint/fatal/CV-CERL8-bad-static.output
CV-CERL8-bad-static.c:6:3: error: Invalid operand types to ==.
  Constraint violation (CV-CERL8). See C11 sec. 6.5.9:2
Translation failed (config dumped). Run kcc -d CV-CERL8-bad-static.c to see commands run.
