examples/error-codes/violates-constraint/fatal/CV-CERL8-bad-static.c
int main() {
  float a;
  float *b = &a;
  int x;
  int *y = &x;
  y == b;
  return 0;
}
